Added derivative func

--- a/calcuviz.ipynb
+++ b/calcuviz.ipynb
@@ -21,6 +21,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import sympy as sp\n",
     "import matplotlib.pyplot as plt\n",
     "from ipywidgets import widgets\n",
     "from IPython.display import display, clear_output\n"
@@ -28,13 +29,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "64e7b06b84a24253ab4ec0db597cd32c",
+       "model_id": "7c6e8c32a32842c492b2818272c87774",
        "version_major": 2,
        "version_minor": 0
       },
@@ -48,7 +49,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e5a20b24c41a4f679eb32110b3cffc26",
+       "model_id": "cdeacf036b31453ea24158d6f36180d4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -62,7 +63,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e874947e797e41a4ac1fb23fb17f65fc",
+       "model_id": "e146cb2f06bc4b2fa18e1d4604848458",
        "version_major": 2,
        "version_minor": 0
       },
@@ -76,7 +77,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "99ee6df065364aa39a13cb9e7bea6eec",
+       "model_id": "6fc74b32395d4e239a9eaaf6b00276a6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -90,7 +91,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a2ffeb5a38bb49158429ce47a319b98e",
+       "model_id": "78331e46a3bf46d68b41aefdb763630d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -104,7 +105,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "215f045a56704d9cb23ead79fed18276",
+       "model_id": "100da2335d234fecb8a0ffdccadbc8a1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -118,7 +119,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "df52a6cdb4ea4002a2dbd038269d8d70",
+       "model_id": "5ebbf2ef118e43648f894ea7c8936854",
        "version_major": 2,
        "version_minor": 0
       },
@@ -169,11 +170,12 @@
     "\n",
     "# Modify the button event handler to include the new text inputs\n",
     "def on_button_click(b):\n",
+    "    func_str = func_input.value\n",
     "    output.clear_output(wait=True)  # Clear the output first\n",
     "    with output:\n",
     "        x_range = (x_start.value, x_end.value)\n",
     "        y_range = (y_start.value, y_end.value)\n",
-    "        plot_function(func_input.value, x_range=x_range, y_range=y_range)\n",
+    "        plot_function_and_derivative(func_str, x_range=x_range, y_range=y_range)\n",
     "\n",
     "\n",
     "plot_button.on_click(on_button_click)\n",
@@ -185,22 +187,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_function(func_str, x_range=(-10, 10), y_range=(-10, 10)):\n",
-    "    x_vals = np.linspace(x_range[0], x_range[1], 400)\n",
-    "    y_vals = [eval(func_str, {\"x\": val}) for val in x_vals]\n",
+    "def compute_derivative(func_str):\n",
+    "    x = sp.symbols('x')\n",
+    "    func = sp.sympify(func_str)\n",
+    "    derivative = sp.diff(func, x)\n",
+    "    return derivative\n",
     "\n",
-    "    plt.plot(x_vals, y_vals, label=func_str)\n",
-    "    plt.ylim(y_range)  # Set the y-axis limits\n",
+    "\n",
+    "def plot_function_and_derivative(func_str, x_range=(-10, 10), y_range=(-10, 10)):\n",
+    "    x_vals = np.linspace(x_range[0], x_range[1], 400)\n",
+    "    func = lambda x: eval(func_str, {\"x\": x})\n",
+    "\n",
+    "    # Calculate original function values\n",
+    "    y_vals = [func(x_val) for x_val in x_vals]\n",
+    "\n",
+    "    # Calculate derivative values\n",
+    "    derivative_str = str(compute_derivative(func_str))\n",
+    "    derivative_func = lambda x: eval(derivative_str, {\"x\": x})\n",
+    "    y_vals_derivative = [derivative_func(x_val) for x_val in x_vals]\n",
+    "\n",
+    "    # Plotting\n",
+    "    plt.figure(figsize=(10,6))\n",
+    "    plt.plot(x_vals, y_vals, label=f'f(x) = {func_str}')\n",
+    "    plt.plot(x_vals, y_vals_derivative, '--', label=f'f\\'(x) = {derivative_str}')\n",
+    "    plt.ylim(y_range)  \n",
     "    plt.legend()\n",
     "    plt.grid(True)\n",
     "    plt.xlabel('x')\n",
     "    plt.ylabel('y')\n",
-    "    plt.title('Function Plot')\n",
-    "    plt.show()\n"
+    "    plt.title('Function and its Derivative')\n",
+    "    plt.show()\n",
+    "\n"
    ]
   }
  ],
