--- a/calcuviz.ipynb
+++ b/calcuviz.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,20 @@
     "    plt.xlabel('x')\n",
     "    plt.ylabel('y')\n",
     "    plt.title('Derivative Plot')\n",
-    "    plt.show()\n"
+    "    plt.show()\n",
+    "\n",
+    "# Numerical Differentiation: Forward Difference Method\n",
+    "def numerical_derivative(func, x, h=1e-5):\n",
+    "    return (func(x + h) - func(x)) / h\n",
+    "\n",
+    "# Numerical Integration: Trapezoidal Rule\n",
+    "def numerical_integral(func, a, b, n=1000):\n",
+    "    h = (b - a) / n\n",
+    "    integral = 0.5 * (func(a) + func(b))\n",
+    "    for i in range(1, n):\n",
+    "        integral += func(a + i*h)\n",
+    "    integral *= h\n",
+    "    return integral\n"
    ]
   },
   {
@@ -191,6 +204,75 @@
    ],
    "source": [
     "plot_derivative(func_input, x_range=(-10, 10), y_range=(-10, 10), target_x_list=[-1, 0, 1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Numerical approximations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Derivative approximation\n",
+    "\n",
+    "To approximate the derivative of your function, you can use numerical differentiation. While symbolic differentiation gives you the exact formula for the derivative, numerical methods provide an approximate value of the derivative at specific points.\n",
+    "\n",
+    "**Usage**:\n",
+    "1. Modify the function you want to differentiate.\n",
+    "2. Specify the `x` value at which you'd like to approximate the derivative.\n",
+    "3. Specify a small value for `h` (e.g., 0.01). The smaller the value, the more accurate the approximation, but be wary of making it too small due to computational limits."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.000020000091921\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(numerical_derivative(lambda x: eval(func_input, {\"x\": x}), 1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Integral approximation\n",
+    "\n",
+    "Numerical integration, or quadrature, is a method to approximate the definite integral of a function. Instead of finding the exact area under the curve, numerical integration provides an estimate based on specific methods like the Trapezoidal or Simpson's rule.\n",
+    "\n",
+    "**Usage**:\n",
+    "1. Define the function you want to integrate.\n",
+    "2. Specify the interval `[a, b]` over which you want to approximate the integral.\n",
+    "3. Choose the method and number of subdivisions or points for the approximation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.1666669999999955\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(numerical_integral(lambda x: eval(func_input, {\"x\": x}), 0, 1))"
    ]
   }
  ],
