Added root finding unsin Newton Raphson Method

--- a/calcuviz.ipynb
+++ b/calcuviz.ipynb
@@ -16,15 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import sympy as sp\n",
     "import matplotlib.pyplot as plt\n",
-    "from ipywidgets import widgets\n",
-    "from IPython.display import display, clear_output\n"
+    "\n"
    ]
   },
   {
@@ -46,11 +45,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "func_input = \"2*x**2 + 3*x + 1\""
+    "func_input = \"sin(x)\""
    ]
   },
   {
@@ -64,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +247,37 @@
     "    if inconclusive:\n",
     "        print(\"\\nInconclusive Points:\")\n",
     "        for x_val, y_val in inconclusive:\n",
-    "            print(f\"x = {x_val}, f(x) = {y_val}\")\n"
+    "            print(f\"x = {x_val}, f(x) = {y_val}\")\n",
+    "\n",
+    "def taylor_series(func_str, a, n):\n",
+    "    x = sp.symbols('x')\n",
+    "    func = sp.sympify(func_str)\n",
+    "    taylor_expansion = func.subs(x, a)\n",
+    "    \n",
+    "    for i in range(1, n+1):\n",
+    "        func_derivative = sp.diff(func, x, i)\n",
+    "        taylor_expansion += (func_derivative.subs(x, a) / sp.factorial(i)) * (x - a)**i\n",
+    "    \n",
+    "    return sp.simplify(taylor_expansion)\n",
+    "\n",
+    "def find_root_newton_raphson(func_str, x0, max_iterations=1000, tolerance=1e-6):\n",
+    "    x = sp.symbols('x')\n",
+    "    func = sp.sympify(func_str)\n",
+    "    derivative = sp.diff(func, x)\n",
+    "    \n",
+    "    f = sp.lambdify(x, func, \"numpy\")\n",
+    "    f_prime = sp.lambdify(x, derivative, \"numpy\")\n",
+    "    \n",
+    "    iteration = 0\n",
+    "    while iteration < max_iterations:\n",
+    "        x1 = x0 - f(x0) / f_prime(x0)\n",
+    "        if abs(x1 - x0) < tolerance:\n",
+    "            return x1\n",
+    "        x0 = x1\n",
+    "        iteration += 1\n",
+    "        \n",
+    "    raise ValueError(\"Newton-Raphson method did not converge after maximum iterations\")\n",
+    "\n"
    ]
   },
   {
@@ -457,24 +486,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Maxima:\n",
-      "x = 2, f(x) = 48\n",
+      "No maxima found.\n",
       "\n",
       "Minima:\n",
-      "x = -2, f(x) = -80\n",
-      "x = 3, f(x) = 45\n"
+      "x = -3/4, f(x) = -1/8\n"
      ]
     }
    ],
    "source": [
     "print_extrema(func_input, domain=(-sp.oo, sp.oo))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Taylor Series Expansion\n",
+    "\n",
+    "To approximate functions using their Taylor Series representation, we can expand them about a specific point, known as the expansion point. The Taylor Series offers a polynomial approximation of the function in the vicinity of this point. The more terms you include in the expansion, the better the approximation, especially near the expansion point.\n",
+    "\n",
+    "**Usage**:\n",
+    "\n",
+    "1. Specify the expansion point `a`.\n",
+    "2. Determine the degree `n` of the Taylor series.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-x**3/6 + x\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(taylor_series(func_input, 0, 4))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Root Finding using Newton-Raphson Method\n",
+    "\n",
+    "Root finding is the process of determining the values of \\(x\\) for which a given function equals zero, i.e., \\(f(x) = 0\\). The Newton-Raphson method is an iterative technique that uses the function and its derivative to rapidly converge to the accurate root value.\n",
+    "\n",
+    "**Usage**:\n",
+    "\n",
+    "1. Specify an initial guess `x0` to start the iteration.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.000000000000002\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(find_root_newton_raphson(func_input, 1))"
    ]
   }
  ],
