--- a/calcuviz.ipynb
+++ b/calcuviz.ipynb
@@ -588,13 +588,32 @@
    "source": [
     "### Solving Differential Equations using Euler's Method\n",
     "\n",
-    "Differential equations involve functions and their derivatives, expressing the relationship between varying quantities. Ordinary Differential Equations (ODEs) have a single unknown function and its derivatives.\n",
+    "**Theory**:  \n",
+    "Differential equations involve functions and their derivatives, expressing relationships between varying quantities. Ordinary Differential Equations (ODEs) have a single unknown function and its derivatives.\n",
     "\n",
-    "**Usage**:\n",
+    "#### Usage:\n",
     "\n",
-    "1. Define your ODE as a Python function `f(t, y)`, where `t` is the independent variable and `y` is the dependent variable.\n",
-    "2. Specify the initial condition `y0`, the initial time `t0`, the end time `tn`, and the step size `h`.\n",
-    "\n"
+    "1. **Define Your ODE**: Create a Python function `f(t, y)` where `t` is the independent variable and `y` is the dependent variable.\n",
+    "2. **Initial Condition**: Specify the initial value of `y` as `y0`.\n",
+    "3. **Time Parameters**: Define the initial time `t0`, end time `tn`, and the step size `h`.\n",
+    "\n",
+    "To solve your differential equation, run the following Python code:\n",
+    "\n",
+    "    solve_ode_euler(YOUR_ODE_FUNCTION, INITIAL_CONDITION, INITIAL_TIME, END_TIME, STEP_SIZE)\n",
+    "\n",
+    "Replace placeholders with actual values or functions.\n",
+    "\n",
+    "#### Example:\n",
+    "\n",
+    "To solve \\( \\frac{dy}{dt} = y - t \\) with initial condition \\( y(0) = 1 \\) from \\( t = 0 \\) to \\( t = 5 \\):\n",
+    "\n",
+    "    f = lambda t, y: y - t\n",
+    "    solve_ode_euler(f, 1, 0, 5, 0.1)\n",
+    "\n",
+    "#### Example Applications:\n",
+    "\n",
+    "- Modeling the growth or decay of populations in biology.\n",
+    "- Describing the behavior of electrical circuits in engineering.\n"
    ]
   },
   {
